# demod

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
demod/: __init__.py  helpers.py
demod/datasets/: README.md  __init__.py  base_loader.py  tou_loader.py
demod/datasets/ATUS/: README.md  parse_data.py
demod/datasets/CREST/: README.md  loader.py  utils.py
demod/datasets/DESTATIS/: loader.py
demod/datasets/ExampleData/: __init__.py  example_loader.py
demod/datasets/ExcellInputFile/: inputs.xlsx  loader.py
demod/datasets/FfE_Open_Data/: __init__.py
demod/datasets/GermanTOU/: create_zip.py  loader.py  parser.py
demod/datasets/Germany/: loader.py
demod/datasets/OpenPowerSystems/: loader.py
demod/datasets/RenewablesNinja/: README.md  loader.py
demod/datasets/tracebase/: README.md  loader.py
demod/metrics/: __init__.py  errors.py  loads.py  states.py
demod/simulators/: __init__.py  activity_simulators.py  appliance_simulators.py  base_simulators.py  car_simulator.py  crest_simulators.py  heating_simulators.py  lighting_simulators.py  load_simulators.py  sparse_simulators.py  util.py  weather_simulators.py
demod/utils/: appliances.py  cards_doc.py  converters.py  countries.py  data_types.py  distribution_functions.py  error_messages.py  monte_carlo.py  parse_helpers.py  plotters.py  sim_types.py  sparse.py  subgroup_handling.py
docs/: README.md  requirements.txt
docs/source/: conf.py  glossary.rst  index.rst  references.rst
docs/source/about/: index.rst
docs/source/api/: abstract_sim.rst  appliances.rst  cards.rst  data_api.rst  error_metrics.rst  index.rst  simulators_api.rst  subgroups.rst  testing.rst  utils.rst
docs/source/contributing/: documentation.rst
docs/source/examples/: index.rst  quickstart.rst  sparse_vs_normal.rst
docs/source/installation/: installation.rst
docs/source/overview/: electricdemand_overview.rst  index.rst  initialization_overview.rst  mobility_overview.rst  occupancy_overview.rst  overview.rst  tables.xlsx  (+3 more)
examples/: bottaccioli.py  bottaccioli_validation.py  change_states_to_occupancy.py  download_ninja.py  quickstart.py  quickstart1_occupancy.py  quickstart2.py  quickstart2_lighting.py  quickstart3_heating.py  quickstart4_full_load.py  run_ffe.py  semi_markov.py  tracebase_dataset.py
tests/: context.py  test_CDFfunctions.py  test_activity_simulators.py  test_appliance_simulators.py  test_base_simulators.py  test_climate.py  test_crests.py  test_data_loader.py  test_example.py  test_heating.py  test_lighting.py  test_load_simulator.py  test_metrics.py  test_metrics_durations.py  test_multisimulators.py  test_parse_helper.py  test_population_loader.py  test_simulators.py  test_sparse_TPM.py  test_util.py
(+639 files in other folders)
