[metadata]
name = demod
version = 0.2
author = EMatteo Barsanti, Lionel Constantin, HERUS, Ecole Polytechnique Fédérale de Lausanne
author_email = demod@groupes.epfl.ch
description = Domestic Energy Demand Modelling Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/epfl-herus/demod
project_urls =
    Documentation = https://demod.readthedocs.io/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering

[options]
packages = demod
python_requires = >=3.8
install_requires =
    numpy==1.19
    scipy==1.4
    pandas==1.2
    openpyxl==2.6
    matplotlib==3.4
