# File used for pypi set up

# Reference https://packaging.python.org/tutorials/packaging-projects/#uploading-your-project-to-pypi

# To run the file, follow the instructions
# 0. Create a github release
# 1. Change the version and make sure it is a newer version than the
# precedently uploaded one.
# 2. install/upgrade the libraries using pip
#       pip install --upgrade pip build twine
# 3. In the directory of this file, build the archive to be uploaded
#       python3 -m build
# 4. Upload using twine
#       twine upload dist/*

[metadata]
name = demod
version = 0.2
author = Matteo Barsanti, Lionel Constantin, HERUS, Ecole Polytechnique Fédérale de Lausanne
author_email = demod@groupes.epfl.ch
description = Domestic Energy Demand Modelling Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/epfl-herus/demod
project_urls =
    Documentation = https://demod.readthedocs.io/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering

[options]
install_package_data = false
packages = demod
python_requires = >=3.8
install_requires =
    numpy==1.19
    scipy==1.4
    pandas==1.2
    openpyxl==2.6
    matplotlib==3.4
